--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,5 @@ ReactNativeIdfaAaid_kotlinVersion=1.3.50
 ReactNativeIdfaAaid_compileSdkVersion=28
 ReactNativeIdfaAaid_buildToolsVersion=28.0.3
 ReactNativeIdfaAaid_targetSdkVersion=28
+android.useAndroidX=true
+android.enableJetifier=true
