--- a/example/ios/ReactNativeIdfaAaidExample/Info.plist
+++ b/example/ios/ReactNativeIdfaAaidExample/Info.plist
@@ -53,5 +53,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>App would like to access IDFA for tracking purpose</string>
 </dict>
 </plist>
