--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
       "publish": true
     },
     "github": {
-      "release": true
+      "release": false
     },
     "plugins": {
       "@release-it/conventional-changelog": {
