--- a/android/build.gradle
+++ b/android/build.gradle
@@ -127,5 +127,5 @@ dependencies {
   // noinspection GradleDynamicVersion
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation "com.google.android.gms:play-services-ads:19.5.0"
+  implementation "com.google.android.gms:play-services-ads-identifier:17.0.0"
 }
