--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ project.xcworkspace
 .gradle
 local.properties
 android.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
 
 # Cocoapods
 #
@@ -47,12 +51,6 @@ npm-debug.log
 yarn-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-android/app/libs
-android/keystores/debug.keystore
-
 # Expo
 .expo/*
 
@@ -61,3 +59,14 @@ lib/
 
 # Husky
 .husky/
+
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
+
+# Ruby / CocoaPods
+/ios/Pods/
+/vendor/bundle/
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
