--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
-    "release": "release-it",
-    "example": "yarn --cwd example",
-    "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "release": "release-it"
   },
   "keywords": [
     "react-native",
@@ -45,25 +42,25 @@
   },
   "homepage": "https://github.com/sparkfabrik/sparkfabrik-react-native-idfa-aaid#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/config-conventional": "^17.4.2",
     "@react-native-community/bob": "^0.17.1",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^2.0.1",
-    "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.4",
-    "@types/react-native": "^0.64.4",
-    "commitlint": "^12.1.1",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "pod-install": "^0.1.21",
-    "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-native": "^0.64.0",
-    "release-it": "^14.6.1",
-    "typescript": "^4.2.4",
+    "@react-native-community/eslint-config": "^3.0.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.27",
+    "@types/react-native": "^0.71.1",
+    "commitlint": "^17.4.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-ft-flow": "^2.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "^0.74.1",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.4.1",
+    "release-it": "^15.6.0",
+    "typescript": "^4.8.4",
     "y18n": "5.0.8"
   },
   "peerDependencies": {
@@ -128,6 +125,8 @@
     "lib/"
   ],
   "prettier": {
+    "arrowParens": "avoid",
+    "bracketSameLine": true,
     "quoteProps": "consistent",
     "singleQuote": true,
     "tabWidth": 2,
