--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@sparkfabrik/react-native-idfa-aaid",
   "version": "1.0.0",
   "description": "React Native module for getting IDFA (iOS) or AAID (Android)",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/src/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index.tsx",
+  "source": "src/index.tsx",
   "files": [
     "src",
     "lib",
@@ -42,24 +42,24 @@
   },
   "homepage": "https://github.com/sparkfabrik/sparkfabrik-react-native-idfa-aaid#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/config-conventional": "^17.6.1",
     "@react-native-community/bob": "^0.17.1",
-    "@react-native-community/eslint-config": "^3.0.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.27",
-    "@types/react-native": "^0.71.1",
-    "commitlint": "^17.4.2",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.37",
+    "@types/react-native": "^0.71.6",
+    "commitlint": "^17.6.1",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "^0.74.1",
+    "jest": "^29.5.0",
+    "metro-react-native-babel-preset": "^0.76.2",
     "pod-install": "^0.1.38",
-    "prettier": "^2.4.1",
-    "release-it": "^15.6.0",
+    "prettier": "^2.8.7",
+    "release-it": "^15.10.1",
     "typescript": "^4.8.4",
     "y18n": "5.0.8"
   },
