remove package attribute

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sparkfabrikreactnativeidfaaaid">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 </manifest>
