--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,31 @@
 {
-  "name": "example",
-  "displayName": "example"
+  "name": "IDFAExample",
+  "displayName": "IDFAExample",
+  "components": [
+    {
+      "appKey": "IDFAExample",
+      "displayName": "IDFAExample"
+    }
+  ],
+  "plugins": [
+    "@sparkfabrik/react-native-idfa-aaid"
+  ],
+  "resources": {
+    "android": [
+      "dist/res",
+      "dist/main.android.jsbundle"
+    ],
+    "ios": [
+      "dist/assets",
+      "dist/main.ios.jsbundle"
+    ],
+    "macos": [
+      "dist/assets",
+      "dist/main.macos.jsbundle"
+    ],
+    "windows": [
+      "dist/assets",
+      "dist/main.windows.bundle"
+    ]
+  }
 }
