--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sparkfabrik/react-native-idfa-aaid",
   "version": "1.1.0",
-  "description": "React Native module for getting IDFA (iOS) or AAID (Android)",
+  "description": "React Native module to get IDFA (iOS) or AAID (Android)",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
@@ -48,15 +48,15 @@
   },
   "homepage": "https://github.com/sparkfabrik/sparkfabrik-react-native-idfa-aaid#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.4",
     "@expo/config-plugins": "^7.0.0",
     "@react-native-community/bob": "^0.17.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "^0.74.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.46",
-    "commitlint": "^18.4.3",
+    "@types/react": "^18.2.48",
+    "commitlint": "^18.4.4",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-ft-flow": "^2.0.3",
